[tool.poetry]
name = "tus-datos-prueba"
version = "0.1.0"
description = ""
authors = ["Armando Tinoco <ajtp18@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = {extras = ["standard"], version = "^0.115.6"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
psycopg = "^3.2.3"
python-slugify = "^8.0.4"
bcrypt = "^4.2.1"
strawberry-graphql = {extras = ["fastapi"], version = "^0.253.1"}
psycopg-binary = "^3.2.3"
alembic = "^1.14.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.10.1"
elasticsearch = {extras = ["async"], version = "^8.16.0"}
aiosmtplib = "^3.0.2"
pytest = "^8.3.4"
prometheus-fastapi-instrumentator = "^7.0.0"
uvicorn = "^0.32.1"

[tool.poetry.scripts]
dev = "commands:dev"
alembic-migrate = "commands:alembic_migrate"
alembic-autogen = "commands:alembic_autogen"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
